<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2e8c4"
    android:orientation="vertical"
    tools:context=".Activities.Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp">


        <EditText
            android:id="@+id/Apellido_Registro"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="112dp"
            android:autofillHints=""
            android:textColor="#3ec9a7"
            android:background="@drawable/textoredondo"
            android:hint="@string/hint_Apellido_Registro"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">


        <EditText
            android:id="@+id/Nombre_Registro"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="112dp"
            android:background="@drawable/textoredondo"
            android:hint="@string/hint_Nombre_Registro"
            android:inputType="text"
            android:textColor="#3ec9a7"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">


        <EditText
            android:id="@+id/Edad_Registro"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="112dp"
            android:background="@drawable/textoredondo"
            android:hint="@string/hint_Edad_Registro"
            android:inputType="number"
            android:textColor="#3ec9a7"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">


        <EditText
            android:id="@+id/Email_Registro"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:autofillHints=""
            android:background="@drawable/textoredondo"
            android:hint="@string/hint_Email_Registro"
            android:textColor="#3ec9a7"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">


        <EditText
            android:id="@+id/Contraseña_Registro"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="112dp"
            android:background="@drawable/textoredondo"
            android:hint="@string/hint_Contraseña_Registro"
            android:inputType="textPassword"
            android:textColor="#3ec9a7"
            android:autofillHints="" />
    </LinearLayout>

    <Button
        android:id="@+id/Boton_Confirmar_Registro"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginStart="112dp"
        android:text="@string/Confirmar_Registro"
        android:textColor="#3ec9a7"
        android:backgroundTint="#616668"/>


</LinearLayout>