<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:background="#f2e8c4"
    tools:context=".Activities.LoginActivity">


    <EditText
        android:id="@+id/Email_Login"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@drawable/textoredondo"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#3ec9a7"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Password_Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <EditText
        android:id="@+id/Password_Login"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@drawable/textoredondo"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="#3ec9a7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Email_Login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Email_Login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        android:autofillHints="" />

    <Button
        android:id="@+id/Boton_Ingresar"
        android:layout_width="133dp"
        android:layout_height="39dp"
        android:text="@string/Ingresar"
        app:layout_constraintBottom_toBottomOf="@+id/Boton_Registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Boton_Registrarse"
        app:layout_constraintVertical_bias="0.0"
        android:textSize="13sp"
        android:textColor="#3ec9a7"
        android:backgroundTint="#616668"
/>

    <Button
        android:id="@+id/Boton_Registrarse"
        android:layout_width="132dp"
        android:layout_height="41dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#616668"
        android:text="@string/Registrarse"
        android:textColor="#3ec9a7"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/Boton_Ingresar"
        app:layout_constraintTop_toBottomOf="@+id/Password_Login"
        app:layout_constraintVertical_bias="0.518" />


</androidx.constraintlayout.widget.ConstraintLayout>