<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:background="#98d9b6">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="6dp"
            tools:ignore="UselessParent">



            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="2dp"
                android:layout_toStartOf="@id/imagenGrande"
                android:orientation="vertical"
                android:layout_marginStart="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/Nombre_Dosis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/nombre_Dosis"
                        android:textColor="#616668"
                        />

                    <TextView
                        android:id="@+id/info_Nombre_Dosis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="nombre dosis"
                        android:textSize="18sp"
                        android:textColor="#616668"
                        android:layout_marginStart="5dp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/Periodo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/periodo"
                        android:textColor="#616668"
                        />

                    <TextView
                        android:id="@+id/info_Periodo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="8 horas"
                        android:textSize="18sp"
                        android:textColor="#616668"
                        android:layout_marginStart="5dp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/Proxima"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/proxima"
                        android:textColor="#616668"
                        />

                    <TextView
                        android:id="@+id/info_Proxima"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="30 minutos"
                        android:textColor="#616668"
                        android:textSize="18sp"
                        tools:ignore="HardcodedText" />


                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/imagenGrande"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                app:srcCompat="@drawable/trash_svgrepo_com"
                android:contentDescription="@string/todo"
                tools:ignore="ContentDescription" />


        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>